--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,5 +2,11 @@ spring:
   application:
     name: metro-back
 springdoc:
+  datasource:
+    url: 'jdbc:postgresql://localhost:5432/metro'
+    username: 'postgres'
+    password: 'Orion123'
+    hikari:
+      catalog: 'metro'
   swagger-ui:
     path: '/swagger-ui'
