--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/sql/1_init_db.sql
+  - include:
+      file: db/changelog/sql/2_init_dictionaries.sql
