--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 
         <jsonwebtoken.version>0.12.5</jsonwebtoken.version>
         <gson.version>2.10.1</gson.version>
+        <jgrapht.version>1.5.1</jgrapht.version>
     </properties>
 
     <dependencies>
@@ -71,6 +72,13 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.5.0</version>
+        </dependency>
+
+        <!-- graph -->
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>${jgrapht.version}</version>
         </dependency>
 
         <!-- utils -->
