--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,4 +7,7 @@ spring:
     password: 'postgres'
 springdoc:
   swagger-ui:
-    path: '/swagger-ui'
+    path: '/swagger-ui/'
+logging:
+  level:
+    ru.mosmetro.backend: debug
