--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
       file: db/changelog/sql/1_init_db.sql
   - include:
       file: db/changelog/sql/2_init_dictionaries.sql
+  - include:
+      file: db/changelog/sql/3_fix_table_employee_shift_order.sql
