--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,12 +1,8 @@
 spring:
-  application:
-    name: metro-back
   datasource:
-    url: 'jdbc:postgresql://178.216.98.128:50777/metro_test_main'
-    username: 'soagshka'
-    password: ')3:.X4zrOO4jEc6#'
-  liquibase:
-    enabled: true
-  mvc:
-    pathmatch:
-      matching-strategy: ant_path_matcher
+    url: 'jdbc:postgresql://let-squad.ru:50777/metro_main'
+    username: 'metroback'
+    password: 'merkator4422'
+server:
+  port: 8080
+
