--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,7 @@ spring:
     password: 'postgres'
 springdoc:
   swagger-ui:
+    disable-swagger-default-url: true
     path: '/swagger-ui/'
 metro:
   security:
