Поправил дтошки на работников

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>${jsonwebtoken.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.passay/passay -->
+        <dependency>
+            <groupId>org.passay</groupId>
+            <artifactId>passay</artifactId>
+            <version>1.6.4</version>
+        </dependency>
 
         <!-- test -->
         <dependency>
